Refactoring + more examples